--- a/src/login.html
+++ b/src/login.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="login.js">
 </head>
 <!DOCTYPE HTML>
 <html>
@@ -70,7 +71,7 @@
                             <div class="col-12 enlace-ayuda">
                                 <a href="#">¿Necesitas ayuda?</a>
                             </div>
-                            
+
                         </div>
                     </form>
 
