No jalo, pero se intento

--- a/src/no-sidebar.html
+++ b/src/no-sidebar.html
@@ -19,7 +19,7 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Telephasic</a></h1>
+							<h1 id="logo"><a href="index.html">Alice.IA</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -188,6 +188,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="../"></script>
 
 	</body>
 </html>
