--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE HTML>
-<!--
-	Telephasic by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
--->
-<html>
+<html lang="en">
 
 <head>
-	<title>Untitled</title>
+	<title>Alice IA</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -21,17 +16,19 @@
 			<div id="header" class="container">
 
 				<!-- Logo -->
-				<h1 id="logo"><a href="index.html">Telephasic</a></h1>
+				<!--<h1 id="logo"><a href="index.html">Telephasic</a></h1>-->
 
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
+						
+						<li><a href="index.html">Inicio</a></li>
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="#">Ayuda inmediata</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li><a href="#">Etiam dolore nisl</a></li>
+								<li><a href="#">Ayuda ciudadana</a></li>
+								<li><a href="#">Numero de Ayuda</a></li>
+								<li><a href="#">Numero de Ayuda</a></li>
 								<li>
 									<a href="#">Phasellus consequat</a>
 									<ul>
@@ -44,33 +41,36 @@
 								<li><a href="#">Veroeros feugiat</a></li>
 							</ul>
 						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li class="break"><a href="right-sidebar.html">Right Sidebar</a></li>
+						<li><a href="left-sidebar.html">Alice</a></li>
+						<li class="break"><a href="right-sidebar.html">Centros de Ayuda</a></li>
 						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<li>
+							<button type="button">Inicia sesión</button class="btn-Inicio">
+							<button type="button">Registrate</button class="btn-Registro">
+						</li>
 					</ul>
 				</nav>
-
 			</div>
-
+			
+				<img src="images/LogoAliceIA.jpg" id="LogoPrincipal">
 			<!-- Hero -->
 			<section id="hero" class="container">
-				<header>
+				<!--
+				 <header>
 					<h2>Adipiscing ut col adipiscing
 						<br />
 						quam accumsan at Adipiscing
 					</h2>
 				</header>
+-->
 				<p>Praesent sed porta ut at mus accumsan cep nibh morbi
-					<br />
 					cep Accumsan Commodo Condimentum vel eleifend.
 				</p>
 				<ul class="actions">
 					<li><a href="src/login.html" class="button">empezar</a></li>
 				</ul>
 			</section>
-
 		</div>
-
 		<!-- Features 1 -->
 		<div class="wrapper">
 			<div class="container">
