--- a/src/signin.html
+++ b/src/signin.html
@@ -28,7 +28,7 @@
                         <h2 class="titulo">crear cuenta</h2>
                     </header>
 
-                    <form method="post" id="singin-form">
+                    <form method="post" id="signin-form">
                         <div class="row gtr-50">
 
                             <div class="col-12 etiqueta-texto">
@@ -51,7 +51,7 @@
 
                             <div class="col-12">
                                 <ul class="actions">
-                                    <li><input type="submit" value="Continuar" class="button continuar" /></li>
+                                    <li><input type="submit" value="Continuar" class="button-continuar" /></li>
                                 </ul>
                             </div>
 
