--- a/index.html
+++ b/index.html
@@ -2,71 +2,77 @@
 <html lang="en">
 
 <head>
-	<title>Alice IA</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Alice IA</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
+https://www.canva.com/design/DAG3wq6J2vE/L4oyixMTDNwLDqRkza4aIg/edit?utm_content=DAG3wq6J2vE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
 
 <body class="homepage is-preload">
-	<div id="page-wrapper">
+    <div id="page-wrapper">
 
-		<!-- Header -->
-		<div id="header-wrapper">
-			<div id="header" class="container">
+        <!-- Header -->
+        <div id="header-wrapper">
+            <div id="header" class="container">
 
-				<!-- Logo -->
-				<!--<h1 id="logo"><a href="index.html">Telephasic</a></h1>-->
+                <!-- Logo -->
+                <!--<h1 id="logo"><a href="index.html">Telephasic</a></h1>-->
 
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						
-						<li><a href="index.html">Inicio</a></li>
-						<li>
-							<a href="#">Ayuda inmediata</a>
-							<ul>
-								<li><a href="#">Ayuda ciudadana</a></li>
-								<li><a href="#">Numero de Ayuda</a></li>
-								<li><a href="#">Numero de Ayuda</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
-						<li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
-						<li>
-						<a href="src/login.html" class="btn-Derecha">Inicia sesión</a>
-						<!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->	
-						<a href="#" class="btn-Derecha">Registrate</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-			
-				<img src="images/LogoAliceIA.jpg" id="LogoPrincipal">
-			<!-- Hero -->
-			<section id="hero" class="container">
-				<ul class="actions">
-					<li><a style="color: #02003E; font-family: monospace;" href="src/login.html" class="button">Comenzar</a></li>
-				</ul>
-			</section>
-			<br>
-			<h2 style="color: #288488; font-family:monospace; text-align: center;">Conoce mas sobre Alice IA </h2>
-			<h4 style="text-align: center;">Unete a nosotros, más de 500 personas han encontrado consuelo y claridad hablando con Alice</h4>
-		</div>
-		
-		<!-- 
+                <!-- Nav -->
+                <nav id="nav">
+                    <ul>
+
+                        <li><a href="index.html">Inicio</a></li>
+                        <li>
+                            <a href="#">Ayuda inmediata</a>
+                            <ul>
+                                <li><a href="#">Ayuda ciudadana</a></li>
+                                <li><a href="#">Numero de Ayuda</a></li>
+                                <li><a href="#">Numero de Ayuda</a></li>
+                                <li>
+                                    <a href="#">Phasellus consequat</a>
+                                    <ul>
+                                        <li><a href="#">Lorem ipsum dolor</a></li>
+                                        <li><a href="#">Phasellus consequat</a></li>
+                                        <li><a href="#">Magna phasellus</a></li>
+                                        <li><a href="#">Etiam dolore nisl</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Veroeros feugiat</a></li>
+                            </ul>
+                        </li>
+                        <li id="liAlice"><a href="/nav-alice-usuarios/left-sidebar.html">Alice</a></li>
+                        <li class="break" id="liCentro"><a href="/nav-alice-usuarios/right-sidebar.html">Centros de
+                                Ayuda</a></li>
+                        <li>
+                            <a href="/nav-alice-usuarios/login.html" class="btn-Derecha">Inicia sesión</a>
+                            <!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->
+
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <img src="images/LogoAliceIA.jpg" id="LogoPrincipal">
+            <!-- Hero -->
+            <section id="hero" class="container">
+                <ul class="actions">
+                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html"
+                            class="button">Comenzar</a></li>
+                </ul>
+            </section>
+            <br>
+            <h2 style="color: #288488; font-family:monospace; text-align: center;">Conoce mas sobre Alice IA </h2>
+            <h4 style="text-align: center;">Unete a nosotros, más de 500 personas han encontrado consuelo y claridad
+                hablando con Alice</h4>
+        </div>
+
+        <!-- 
 		<div class="Comentarios">
     <div class="formulario-comentarios">
         <h2 style="text-align: center;">Comparte tu experiencia</h2>
@@ -103,24 +109,24 @@
     </div>
 </div>
 -->
-<!-- Tarjetas de los comentarios(estatico)-->
-		<div class="testimonios-section">
-    <div class="carrusel-container">
-        <div class="carrusel-testimonios" id="carruselTestimonios">
+        <!-- Tarjetas de los comentarios(estatico)-->
+        <div class="testimonios-section">
+            <div class="carrusel-container">
+                <div class="carrusel-testimonios" id="carruselTestimonios">
+                </div>
+                <div class="carrusel-indicadores" id="indicadores">
+                </div>
+            </div>
         </div>
-        <div class="carrusel-indicadores" id="indicadores">
-        </div>
-    </div>
-</div>
 
-		<!-- Features 1 
+        <!-- Features 1 
 		<div class="wrapper">
 			<div class="container">
 				 <section class="comentarios-bienestar">
             <h2 style="text-align: center; color: #4CAF50;">Espacio de Reflexión Compartida</h2>
             <p style="text-align: center; color: #666;">Comparte tus pensamientos de forma respetuosa y constructiva</p>
             -->
-            <!-- Formulario de comentarios 
+        <!-- Formulario de comentarios 
             <form id="form-comentario-bienestar" class="form-comentario">
                 <textarea 
                     placeholder="¿Cómo te sientes hoy? Comparte tus reflexiones..."
@@ -131,7 +137,7 @@
                 </button>
             </form>
             -->
-            <!-- Lista donde se mostrarán los comentarios 
+        <!-- Lista donde se mostrarán los comentarios 
             <div id="lista-comentarios-bienestar" class="lista-comentarios">
                 <p class="mensaje-inicial">Sé el primero en compartir una reflexión...</p>
             </div>
@@ -139,58 +145,58 @@
 			</div>
 		</div>
 -->
-		<!-- Features 2 -->
-			</div>
+        <!-- Features 2 -->
+    </div>
 
-		<!-- Footer -->
-		<div id="footer-wrapper">
-			<div id="footer" class="container">
-				<header class="major">
-					<h2>Visitanos en nuestras redes sociales</h2>
-				</header>
-				<div class="row">
-					<section class="col-6 col-12-narrower">
-						<img src="images/LogoAliceIA.jpg" class="imagen-izquierda">
-					</section>
-					<section class="col-6 col-12-narrower">
-						<div class="row gtr-0">
-							<ul class="divided icons col-6 col-12-mobile">
-								<li class="icon brands fa-twitter"><a href="#"><span
-											class="extra">twitter.com/</span>untitled</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#"><span
-											class="extra">facebook.com/</span>untitled</a></li>
-								<li class="icon brands fa-dribbble"><a href="#"><span
-											class="extra">dribbble.com/</span>untitled</a></li>
-							</ul>
-							<ul class="divided icons col-6 col-12-mobile">
-								<li class="icon brands fa-instagram"><a href="#"><span
-											class="extra">instagram.com/</span>untitled</a></li>
-								<li class="icon brands fa-youtube"><a href="#"><span
-											class="extra">youtube.com/</span>untitled</a></li>
-								<li class="icon brands fa-pinterest"><a href="#"><span
-											class="extra">pinterest.com/</span>untitled</a></li>
-							</ul>
-						</div>
-					</section>
-				</div>
-			</div>
-			<div id="copyright" class="container">
-				<ul class="menu">
-					<li>&copy; Tactical solutions.</li>
-				</ul>
-			</div>
-		</div>
+    <!-- Footer -->
+    <div id="footer-wrapper">
+        <div id="footer" class="container">
+            <header class="major">
+                <h2>Visitanos en nuestras redes sociales</h2>
+            </header>
+            <div class="row">
+                <section class="col-6 col-12-narrower">
+                    <img src="images/LogoAliceIA.jpg" class="imagen-izquierda">
+                </section>
+                <section class="col-6 col-12-narrower">
+                    <div class="row gtr-0">
+                        <ul class="divided icons col-6 col-12-mobile">
+                            <li class="icon brands fa-twitter"><a href="#"><span
+                                        class="extra">twitter.com/</span>untitled</a></li>
+                            <li class="icon brands fa-facebook-f"><a href="#"><span
+                                        class="extra">facebook.com/</span>untitled</a></li>
+                            <li class="icon brands fa-dribbble"><a href="#"><span
+                                        class="extra">dribbble.com/</span>untitled</a></li>
+                        </ul>
+                        <ul class="divided icons col-6 col-12-mobile">
+                            <li class="icon brands fa-instagram"><a href="#"><span
+                                        class="extra">instagram.com/</span>untitled</a></li>
+                            <li class="icon brands fa-youtube"><a href="#"><span
+                                        class="extra">youtube.com/</span>untitled</a></li>
+                            <li class="icon brands fa-pinterest"><a href="#"><span
+                                        class="extra">pinterest.com/</span>untitled</a></li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div id="copyright" class="container">
+            <ul class="menu">
+                <li>&copy; Tactical solutions.</li>
+            </ul>
+        </div>
+    </div>
 
-	</div>
+    </div>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.dropotron.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-<!--
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <!--
 	<script>
 document.addEventListener('DOMContentLoaded', function() {
     const formComentario = document.getElementById('form-comentario-bienestar');
@@ -253,80 +259,82 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 -->
-<!-- js estatico para comentarios -->
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    const testimonios = [
-        {
-            nombre: "Kimberly ",
-            texto: "\"Alice está ahí cuando tengo problemas y me ayuda a ver las cosas desde una nueva perspectiva. Es casi como charlar con un amigo sabio que siempre te cubre las espaldas\".",
-            estrellas: "★★★★★"
-        },
-        {
-            nombre: "Olivia ", 
-            texto: "\"Me encanta no tener que pedir cita ni esperar. Puedo hablar las cosas en tiempo real, y eso ha sido mucho más útil que esperar a una sesión.\"",
-            estrellas: "★★★★★"
-        },
-        {
-            nombre: "Julio",
-            texto: "\"Al principio era escéptico, pero Alice realmente me escucha 24/7 siempre que lo necesito. Es como tener un terapeuta en el bolsillo\".",
-            estrellas: "★★★★★"
-        }
-    ];
+    <!-- js estatico para comentarios -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const testimonios = [
+                {
+                    nombre: "Kimberly ",
+                    texto: "\"Alice está ahí cuando tengo problemas y me ayuda a ver las cosas desde una nueva perspectiva. Es casi como charlar con un amigo sabio que siempre te cubre las espaldas\".",
+                    estrellas: "★★★★★"
+                },
+                {
+                    nombre: "Olivia ",
+                    texto: "\"Me encanta no tener que pedir cita ni esperar. Puedo hablar las cosas en tiempo real, y eso ha sido mucho más útil que esperar a una sesión.\"",
+                    estrellas: "★★★★★"
+                },
+                {
+                    nombre: "Julio",
+                    texto: "\"Al principio era escéptico, pero Alice realmente me escucha 24/7 siempre que lo necesito. Es como tener un terapeuta en el bolsillo\".",
+                    estrellas: "★★★★★"
+                }
+            ];
 
-    const carrusel = document.getElementById('carruselTestimonios');
-    const indicadoresContainer = document.getElementById('indicadores');
-    let indiceActual = 0;
-    let intervalo;
+            const carrusel = document.getElementById('carruselTestimonios');
+            const indicadoresContainer = document.getElementById('indicadores');
+            let indiceActual = 0;
+            let intervalo;
 
-    // Generar tarjetas de testimonios
-    testimonios.forEach((testimonio, index) => {
-        const tarjeta = document.createElement('div');
-        tarjeta.className = `tarjeta-testimonio ${index === 0 ? 'activa' : ''}`;
-        tarjeta.innerHTML = `
+            // Generar tarjetas de testimonios
+            testimonios.forEach((testimonio, index) => {
+                const tarjeta = document.createElement('div');
+                tarjeta.className = `tarjeta-testimonio ${index === 0 ? 'activa' : ''}`;
+                tarjeta.innerHTML = `
             <div class="estrellas">${testimonio.estrellas}</div>
             <h3>${testimonio.nombre}</h3>
             <p>${testimonio.texto}</p>
         `;
-        carrusel.appendChild(tarjeta);
+                carrusel.appendChild(tarjeta);
 
-        // Generar indicadores
-        const indicador = document.createElement('span');
-        indicador.className = `indicador ${index === 0 ? 'activo' : ''}`;
-        indicador.dataset.index = index;
-        indicador.addEventListener('click', () => cambiarTestimonio(index));
-        indicadoresContainer.appendChild(indicador);
-    });
+                // Generar indicadores
+                const indicador = document.createElement('span');
+                indicador.className = `indicador ${index === 0 ? 'activo' : ''}`;
+                indicador.dataset.index = index;
+                indicador.addEventListener('click', () => cambiarTestimonio(index));
+                indicadoresContainer.appendChild(indicador);
+            });
 
-    // Función para cambiar testimonio
-    function cambiarTestimonio(nuevoIndice) {
-        indiceActual = nuevoIndice;
-        carrusel.style.transform = `translateX(-${indiceActual * 100}%)`;
-        
-        // Actualizar indicadores
-        document.querySelectorAll('.indicador').forEach((ind, index) => {
-            ind.classList.toggle('activo', index === indiceActual);
+            // Función para cambiar testimonio
+            function cambiarTestimonio(nuevoIndice) {
+                indiceActual = nuevoIndice;
+                carrusel.style.transform = `translateX(-${indiceActual * 100}%)`;
+
+                // Actualizar indicadores
+                document.querySelectorAll('.indicador').forEach((ind, index) => {
+                    ind.classList.toggle('activo', index === indiceActual);
+                });
+            }
+
+            // Cambio automático cada 3 segundos
+            function iniciarCarruselAutomatico() {
+                intervalo = setInterval(() => {
+                    const siguienteIndice = (indiceActual + 1) % testimonios.length;
+                    cambiarTestimonio(siguienteIndice);
+                }, 3000);
+            }
+
+            // Pausar carrusel al hacer hover
+            carrusel.addEventListener('mouseenter', () => clearInterval(intervalo));
+            carrusel.addEventListener('mouseleave', iniciarCarruselAutomatico);
+
+            // Iniciar carrusel
+            iniciarCarruselAutomatico();
         });
-    }
+    </script>
 
-    // Cambio automático cada 3 segundos
-    function iniciarCarruselAutomatico() {
-        intervalo = setInterval(() => {
-            const siguienteIndice = (indiceActual + 1) % testimonios.length;
-            cambiarTestimonio(siguienteIndice);
-        }, 3000);
-    }
-
-    // Pausar carrusel al hacer hover
-    carrusel.addEventListener('mouseenter', () => clearInterval(intervalo));
-    carrusel.addEventListener('mouseleave', iniciarCarruselAutomatico);
-
-    // Iniciar carrusel
-    iniciarCarruselAutomatico();
-});
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
