--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Hero -->
             <section id="hero" class="container">
                 <ul class="actions">
-                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html"
+                    <li><a style="color: #02003E; font-family: monospace;" href="src/../nav-alice-usuarios/login.html"
                             class="button">Comenzar</a></li>
                 </ul>
             </section>
