son las 5 de la mañana y yo no he dormido nada

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <!-- Hero -->
             <section id="hero" class="container">
                 <ul class="actions">
-                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html" 
-                            class="button">Comenzar</a></li>                      <!--  aqui va el fakin chat -->
+                    <li><a style="color: #02003E; font-family: monospace;" href="nav-alice-usuarios/login.html"
+                            class="button">Comenzar</a></li> <!--  aqui va el fakin chat -->
                 </ul>
             </section>
             <br>
@@ -302,7 +302,7 @@ document.addEventListener('DOMContentLoaded', function() {
         const logo = document.getElementById("LogoPrincipal");
 
         function handleLogoClick() {
-            window.location.href = "/singnin.html";//aqui si va el fakin chat  
+            window.location.href = "../nav-alice-usuarios/login.html"; //aqui si va el fakin chat  
         }
 
         logo.addEventListener("click", handleLogoClick);
