--- a/nav-alice-usuarios/login.html
+++ b/nav-alice-usuarios/login.html
@@ -5,86 +5,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/src/login.js">
-</head>
-<!DOCTYPE HTML>
-<html>
+    <link rel="stylesheet" href="../assets/css/main.css">
 
-<head>
-    <title>Iniciar Sesión</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body class="is-preload">
     <div id="page-wrapper">
+    </div>
+    <div class="wrapper">
+        <div class="container" id="login-main-content">
 
-        <div id="header-wrapper">
-            <div id="header" class="container">
+            <section class="col-6 col-12-narrower estilo_login">
 
-                <h1 id="logo"><a href="index.html">Telephasic</a></h1>
-            </div>
-        </div>
-        <div class="wrapper">
-            <div class="container" id="login-main-content">
+                <header>
+                    <h2 class="titulo">Iniciar sesión</h2>
+                </header>
 
-                <section class="col-6 col-12-narrower estilo_login">
+                <form method="post" id="login-form">
+                    <div class="row gtr-50">
 
-                    <header>
-                        <h2 class="titulo">Iniciar sesión</h2>
-                    </header>
-
-                    <form method="post" id="login-form">
-                        <div class="row gtr-50">
-
-                            <div class="col-12 etiqueta-texto">
-                                <label for="id-input-login">Ingresa tu correo
-                                    electrónico</label>
-                            </div>
-
-                            <div class="col-12">
-                                <input name="email" id="login_email" type="text" required />
-                            </div>
-
-
-                            <div class="col-12 etiqueta-texto">
-                                <label for="id-input-login">Ingresa tu contraseña </label>
-                            </div>
-
-                            <div class="col-12">
-                                <input name="password" id="login_password" type="password" required />
-                            </div>
-
-                            <div class="col-12">
-                                <ul class="actions">
-                                    <li><input type="submit" value="Continuar" class="button-continuar" /></li>
-                                </ul>
-                            </div>
-
-                            <div class="col-12 texto-legal">
-                                <p>Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a href="#">Aviso
-                                        de privacidad</a> de la compañía.</p>
-                            </div>
-
-                            <div class="col-12 enlace-ayuda">
-                                <a href="signin.html">¿crear cuenta?</a>
-                            </div>
-
+                        <div class="col-12 etiqueta-texto">
+                            <label for="login-email">Ingresa tu correo electrónico</label>
                         </div>
-                    </form>
 
-                </section>
-            </div>
+                        <div class="col-12">
+                            <input name="email" id="login-email" type="text" required />
+                        </div>
+
+
+                        <div class="col-12 etiqueta-texto">
+                            <label for="login-password">Ingresa tu contraseña </label>
+                        </div>
+
+                        <div class="col-12">
+                            <input name="password" id="login-password" type="password" required />
+                        </div>
+
+                        <div class="col-12">
+                            <ul class="actions">
+                                <li><input type="submit" value="Continuar" class="button-continuar" /></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-12 texto-legal">
+                            <p>Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a href="#">Aviso
+                                    de privacidad</a> de la compañía.</p>
+                        </div>
+
+                        <div class="col-12 enlace-ayuda">
+                            <a href="signin.html">¿crear cuenta?</a>
+                        </div>
+
+                    </div>
+                </form>
+
+            </section>
         </div>
-<script src=""></script>
+    </div>
+
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.dropotron.min.js"></script>
+    <script src="../assets/js/browser.min.js"></script>
+    <script src="../assets/js/breakpoints.min.js"></script>
+    <script src="../assets/js/util.js"></script>
+    <script src="../assets/js/main.js"></script>
+
+    <script type="module" src="./js/auth_firebase.js"></script>
+    <script type="module" src="./js/loginForm.js"></script>
 </body>
-<footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-</footer>
+
+</html>
