vale verga, me rindo. no pude hacer que funcione y ya son las 5:30 mañana le digo a la profa que yo la cague

--- a/nav-alice-usuarios/login.html
+++ b/nav-alice-usuarios/login.html
@@ -8,72 +8,73 @@
     <link rel="stylesheet" href="../assets/css/main.css">
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="../nav-alice-usuarios/js/loginForm.js"></script>
+    <script type="module" src="../nav-alice-usuarios/js/auth_firebase.js"></script>
 
 </head>
 
 <body class="is-preload">
     <div id="page-wrapper">
-    </div>
-    <div class="wrapper">
-        <div class="container" id="login-main-content">
+        <div class="wrapper">
+            <div class="container" id="login-main-content">
 
-            <section class="col-6 col-12-narrower estilo_login">
+                <section class="col-6 col-12-narrower estilo_login">
 
-                <header>
-                    <h2 class="titulo">Iniciar sesión</h2>
-                </header>
+                    <header>
+                        <h2 class="titulo">Iniciar sesión</h2>
+                    </header>
 
-                <form method="post" id="login-form">
-                    <div class="row gtr-50">
+                    <form method="post" id="login-form">
+                        <div class="row gtr-50">
 
-                        <div class="col-12 etiqueta-texto">
-                            <label for="login-email">Ingresa tu correo electrónico</label>
+                            <div class="col-12 etiqueta-texto">
+                                <label for="login-email">Ingresa tu correo electrónico</label>
+                            </div>
+
+                            <div class="col-12">
+                                <input name="email" id="login-email" type="text" required />
+                            </div>
+
+
+                            <div class="col-12 etiqueta-texto">
+                                <label for="login-password">Ingresa tu contraseña </label>
+                            </div>
+
+                            <div class="col-12">
+                                <input name="password" id="login-password" type="password" required />
+                            </div>
+
+                            <div class="col-12">
+                                <ul class="actions">
+                                    <li><input type="submit" value="Continuar" class="button-continuar" /></li>
+                                </ul>
+                            </div>
+
+                            <div class="col-12 texto-legal">
+                                <p>Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a href="#">Aviso
+                                        de privacidad</a> de la compañía.</p>
+                            </div>
+
+                            <div class="col-12 enlace-ayuda">
+                                <a href="signin.html">¿crear cuenta?</a>
+                            </div>
+
                         </div>
+                    </form>
 
-                        <div class="col-12">
-                            <input name="email" id="login-email" type="text" required />
-                        </div>
-
-
-                        <div class="col-12 etiqueta-texto">
-                            <label for="login-password">Ingresa tu contraseña </label>
-                        </div>
-
-                        <div class="col-12">
-                            <input name="password" id="login-password" type="password" required />
-                        </div>
-
-                        <div class="col-12">
-                            <ul class="actions">
-                                <li><input type="submit" value="Continuar" class="button-continuar" /></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-12 texto-legal">
-                            <p>Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a href="#">Aviso
-                                    de privacidad</a> de la compañía.</p>
-                        </div>
-
-                        <div class="col-12 enlace-ayuda">
-                            <a href="signin.html">¿crear cuenta?</a>
-                        </div>
-
-                    </div>
-                </form>
-
-            </section>
+                </section>
+            </div>
         </div>
-    </div>
 
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/jquery.dropotron.min.js"></script>
-    <script src="../assets/js/browser.min.js"></script>
-    <script src="../assets/js/breakpoints.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/main.js"></script>
+        <script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/jquery.dropotron.min.js"></script>
+        <script src="../assets/js/browser.min.js"></script>
+        <script src="../assets/js/breakpoints.min.js"></script>
+        <script src="../assets/js/util.js"></script>
+        <script src="../assets/js/main.js"></script>
 
-    <script type="module" src="./js/auth_firebase.js"></script>
-    <script type="module" src="./js/loginForm.js"></script>
+
+
 </body>
 
 </html>
