--- a/index.html
+++ b/index.html
@@ -26,41 +26,50 @@
                         <li>
                             <a href="src/Ayuda.html">Ayuda inmediata</a>
                             <ul>
-                                <li> <a href="javascript:void(0)" id="btnAyuda" class="whatsapp-link">
-                                        <img src="images/Whatsapp.png" alt="WhatsApp Ayuda" class="whatsapp-icon">
-                                    </a>
-                                </li>
-                                <li><a href="#">Numero de Ayuda</a></li>
-                                <li><a href="#">Numero de Ayuda</a></li>
-                                <li>
-                                    <a href="#">Phasellus consequat</a>
-                                    <ul>
-                                        <li><a href="#">Lorem ipsum dolor</a></li>
-                                        <li><a href="#">Phasellus consequat</a></li>
-                                        <li><a href="#">Magna phasellus</a></li>
-                                        <li><a href="#">Etiam dolore nisl</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Veroeros feugiat</a></li>
+                                <button id="btnAyuda" class="whatsapp-link">
+                                    <img src="images/Whatsapp.png" alt="" class="whatsapp-icon">
+                                    Ayuda por WhatsApp
+                                </button>
+                        </li>
+                        <li><a href="#">Numero de Ayuda</a></li>
+                        <li><a href="#">Numero de Ayuda</a></li>
+                        <li>
+                            <a href="#">Phasellus consequat</a>
+                            <ul>
+                                <li><a href="#">Lorem ipsum dolor</a></li>
+                                <li><a href="#">Phasellus consequat</a></li>
+                                <li><a href="#">Magna phasellus</a></li>
+                                <li><a href="#">Etiam dolore nisl</a></li>
                             </ul>
                         </li>
-                        <li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
-                        <li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
-                        <li>
-                            <a href="src/login.html" class="btn-Derecha">Inicia sesión</a>
-                            <!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->
-                            <a href="#" class="btn-Derecha">Registrate</a>
-                        </li>
+                        <li><a href="#">Veroeros feugiat</a></li>
+                    </ul>
+                    </li>
+                    <li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
+                    <li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
+                    <li>
+                        <a href="src/login.html" class="btn-Derecha">Inicia sesión</a>
+                        <!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->
+                        <a href="#" class="btn-Derecha">Registrate</a>
+                    </li>
                     </ul>
                 </nav>
             </div>
-
-            <img src="images/LogoAliceIA.jpg" id="LogoPrincipal">
+            <!--
+            <a href="/singnin.html" class="logo-link">
+    <img src="images/LogoAliceIA.jpg" alt="Alice IA" id="LogoPrincipal">
+    <span class="logo-text">Ir al chat principal</span>
+</a>
+            -->
+            <a href="/singnin.html">
+                <img src="images/LogoAliceIA.jpg" alt="Logo Alice IA" id="LogoPrincipal">
+                <span class="sr-only">Alice IA - Ir al chat principal</span>
+            </a>
             <!-- Hero -->
             <section id="hero" class="container">
                 <ul class="actions">
-                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html" 
-                            class="button">Comenzar</a></li>                      <!--  aqui va el fakin chat -->
+                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html" class="button">Comenzar
+                            chat</a></li> <!--  aqui va el fakin chat -->
                 </ul>
             </section>
             <br>
@@ -68,7 +77,6 @@
             <h4 style="text-align: center;">Unete a nosotros, más de 500 personas han encontrado consuelo y claridad
                 hablando con Alice</h4>
         </div>
-
         <!-- 
 		<div class="Comentarios">
     <div class="formulario-comentarios">
