integracion de herramienta de accesibilidad de vale

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
                         <li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
                         <li>
-                            <a href="src/login.html" class="btn-Derecha">Inicia sesión</a>
+                            <!-- <a href="src/login.html" class="btn-Derecha">Inicia sesión</a>-->
                             <!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->
-                            <a href="#" class="btn-Derecha">Registrate</a>
+                            <!-- <a href="#" class="btn-Derecha">Registrate</a>-->
                         </li>
                     </ul>
                 </nav>
