--- a/nav-alice-usuarios/login.html
+++ b/nav-alice-usuarios/login.html
@@ -28,20 +28,23 @@
                         <div class="row gtr-50">
 
                             <div class="col-12 etiqueta-texto">
-                                <label for="login-email">Ingresa tu correo electrónico</label>
+                                <label for="login-email">Correo electrónico</label>
                             </div>
 
                             <div class="col-12">
-                                <input name="email" id="login-email" type="text" required />
+                                <input name="email" id="login-email" type="text"
+                                    placeholder="Ingresa tu correo electrónico" required></input>
+
                             </div>
 
 
                             <div class="col-12 etiqueta-texto">
-                                <label for="login-password">Ingresa tu contraseña </label>
+                                <label for="login-password">Contraseña</label>
                             </div>
 
                             <div class="col-12">
-                                <input name="password" id="login-password" type="password" required />
+                                <input name="password" id="login-password" type="password"
+                                    placeholder="Ingresa tu contraseña" required />
                             </div>
 
                             <div class="col-12">
