--- a/nav-alice-usuarios/signin.html
+++ b/nav-alice-usuarios/signin.html
@@ -37,28 +37,27 @@
                 <section class="col-6 col-12-narrower estilo_login">
 
                     <header>
-                        <h2 class="titulo">crear cuenta</h2>
+                        <h2 class="titulo">Crear Cuenta</h2>
                     </header>
 
                     <form method="post" id="signin-form">
                         <div class="row gtr-50">
 
                             <div class="col-12 etiqueta-texto">
-                                <label for="signin_email">Ingresa tu correo
-                                    electrónico</label>
+                                <label for="signin_email">Correo Electrónico</label>
                             </div>
 
                             <div class="col-12">
-                                <input name="email" id="signin_email" type="text" required />
+                                <input name="email" id="signin_email" type="text" required placeholder="Ingresa tu correoelectrónico "/>
                             </div>
 
 
                             <div class="col-12 etiqueta-texto">
-                                <label for="signin_password">Ingresa tu contraseña </label>
+                                <label for="signin_password">Contraseña </label>
                             </div>
 
                             <div class="col-12">
-                                <input name="password" id="signin_password" type="password" required />
+                                <input name="password" id="signin_password" type="password" required placeholder="Ingresa tu contraseña"/>
                             </div>
 
                             <div class="col-12">
@@ -74,7 +73,7 @@
                             </div>
 
                             <div class="col-12">
-                                <input name="confirm_password" id="signin_confirm_password" type="password" required />
+                                <input name="confirm_password" id="signin_confirm_password" type="password" required placeholder="Confirma tu contraseña"/>
                             </div>
 
                             <div class="col-12">
