correccion del login

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
                     <li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
                     <li>
-                        <a href="src/login.html" class="btn-Derecha">Inicia sesión</a>
+                        <a href="nav-alice-usuarios/login.html" class="btn-Derecha">Inicia sesión</a>
                         <!--<button type="button" >Inicia sesión</button class="btn-Derecha" href="src/login.html"> -->
-                        <a href="#" class="btn-Derecha">Registrate</a>
+                        <a href="nav-alice-usuarios/signin.html" class="btn-Derecha">Registrate</a>
                     </li>
                     </ul>
                 </nav>
@@ -61,14 +61,15 @@
     <span class="logo-text">Ir al chat principal</span>
 </a>
             -->
-            <a href="/singnin.html">
+            <a href="nav-alice-usuarios/signin.html" class="logo-link">
                 <img src="images/LogoAliceIA.jpg" alt="Logo Alice IA" id="LogoPrincipal">
                 <span class="sr-only">Alice IA - Ir al chat principal</span>
             </a>
             <!-- Hero -->
             <section id="hero" class="container">
                 <ul class="actions">
-                    <li><a style="color: #02003E; font-family: monospace;" href="src/login.html" class="button">Comenzar
+                    <li><a style="color: #02003E; font-family: monospace;" href="nav-alice-usuarios/login.html"
+                            class="button">Comenzar
                             chat</a></li> <!--  aqui va el fakin chat -->
                 </ul>
             </section>
@@ -170,7 +171,7 @@
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="main.js" type="module"></script>
     <!--
 	<script>
 document.addEventListener('DOMContentLoaded', function() {
