--- a/nav-alice-usuarios/signin.html
+++ b/nav-alice-usuarios/signin.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../assets/css/main.css" />
-    <script type="module" src="../nav-alice-usuarios/js/auth_firebase.js"></script>
+    <script type="module" src="./js/auth_firebase.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="../main.js"></script>
 
     <style>
         .valid {
@@ -48,7 +49,8 @@
                             </div>
 
                             <div class="col-12">
-                                <input name="email" id="signin_email" type="text" required placeholder="Ingresa tu correoelectrónico "/>
+                                <input name="email" id="signin_email" type="text" required
+                                    placeholder="Ingresa tu correoelectrónico " />
                             </div>
 
 
@@ -57,7 +59,8 @@
                             </div>
 
                             <div class="col-12">
-                                <input name="password" id="signin_password" type="password" required placeholder="Ingresa tu contraseña"/>
+                                <input name="password" id="signin_password" type="password" required
+                                    placeholder="Ingresa tu contraseña" />
                             </div>
 
                             <div class="col-12">
@@ -73,7 +76,8 @@
                             </div>
 
                             <div class="col-12">
-                                <input name="confirm_password" id="signin_confirm_password" type="password" required placeholder="Confirma tu contraseña"/>
+                                <input name="confirm_password" id="signin_confirm_password" type="password" required
+                                    placeholder="Confirma tu contraseña" />
                             </div>
 
                             <div class="col-12">
