Fix HTML structure and restore content

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </ul>
                         </li>
                         <li id="liAlice"><a href="left-sidebar.html">Alice</a></li>
-                        <li class="break" id="liCentro"><a href="right-sidebar.html">Centros de Ayuda</a></li>
+                        <li class="break" id="liCentro"><a href="nav-alice-centros/centros.html">Centros de Ayuda</a></li>
                         <li>
                             <a href="nav-alice-usuarios/login.html" class="btn-Derecha">Inicia sesión</a>
                             <a href="nav-alice-usuarios/signin.html" class="btn-Derecha">Registrate</a>
@@ -219,5 +219,6 @@
 
     </script>
 </body>
+
 
 </html>
