intento de integracion del chat, prueba para vercel

--- a/nav-alice-chatbot/login.html
+++ b/nav-alice-chatbot/login.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="../nav-alice-usuarios/js/loginForm.js"></script>
-    <script type="module" src="../nav-alice-usuarios/js/auth_firebase.js"></script>
+    <script type="module" src="loginForm.js"></script>
+    <script type="module" src="auth_firebase.js"></script>
 
 </head>
 
@@ -59,15 +59,13 @@
                             </div>
 
                             <div class="col-12 enlace-ayuda">
-                                <a href="signin.html">¿crear cuenta?</a>
+                                <a href="signin.html">¿Crear cuenta?</a>
                             </div>
 
                         </div>
                     </form>
-                    <div>
-                        <button id="googleLogin" class="button-google w-100 mb-4">Iniciar sesión con Google</button>
-                    </div>
-               </section>
+
+                </section>
             </div>
         </div>
 
@@ -76,7 +74,7 @@
         <script src="../assets/js/browser.min.js"></script>
         <script src="../assets/js/breakpoints.min.js"></script>
         <script src="../assets/js/util.js"></script>
-        <script src="../main.js" type="module"></script>
+        <script src="../assets/js/main.js"></script>
 
 
 
