--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li>
-            <a href="src/Ayuda.html">Ayuda inmediata</a>
+            <a href="nav-alice-psicologo/psicIndex.html">Ayuda inmediata</a>
             <ul>
                 <li>
                     <a href="https://api.whatsapp.com/send?phone=525635164983&text=tengo%20una%20crisis%20y%20necesito%20asistencia" 
@@ -31,14 +31,15 @@
                         Ayuda por WhatsApp
                     </a>
                 </li>
+                 <!--
                 <li><a href="#">Numero de Ayuda</a></li>
-                <li><a href="#">Numero de Ayuda</a></li>
+                <li><a href="#">Numero de Ayuda</a></li>-->
             </ul>
         </li>
-        <li><a href="left-sidebar.html">Alice</a></li>
+        <li><a href="Chatbot/chatbot.php">Alice</a></li>
         <li><a href="nav-alice-centros/centros.html">Centros de Ayuda</a></li>
-        <li><a href="src/login.html" class="btn-Derecha">Inicia sesión</a></li>
-        <li><a href="#" class="btn-Derecha">Registrate</a></li>
+        <li><a href="nav-alice-usuarios/login.html" class="btn-Derecha">Inicia sesión</a></li>
+        <li><a href="nav-alice-usuarios/signin.html" class="btn-Derecha">Registrate</a></li>
     </ul>
 </nav>
             </div>
