Mis perros cambios

--- a/psicologo_/login.html
+++ b/psicologo_/login.html
@@ -31,6 +31,9 @@
     <p class="extra-link">
       ¿No tienes cuenta? <a href="registro_p.html">Regístrate aquí</a>
     </p>
+    <p class="extra-link">
+      ¿Olvidaste tu contraseña? <a href="recuperar_contraseña.html">Recupera aquí</a>
+    </p>
   </div>
 
   <script src="login.js"></script>
