porfin quedo esta chingadera

--- a/index.html
+++ b/index.html
@@ -31,12 +31,32 @@
                         Ayuda por WhatsApp
                     </a>
                 </li>
-                 <!--
-                <li><a href="#">Numero de Ayuda</a></li>
+                 <li>
+                    <a href="tel:+525521288236" class="phone-link">
+                        <span class="phone-icon">📞</span>
+                        Línea de Ayuda: 55 2128 8236
+                    </a>
+                </li>
+                 <li>
+                    <a href="tel:+525564214951" class="phone-link">
+                        <span class="phone-icon">📞</span>
+                        Línea de Ayuda G: 55 2128 8236
+                    </a>
+                </li>
+                 <li>
+                    <a href="tel:+525524814754" class="phone-link">
+                        <span class="phone-icon">📞</span>
+                        Línea de Ayuda CH: 55 2128 8236
+                    </a>
+                </li>
+               
+                <li><a href="nav-alice-psicologo/login_psicologo.html">Numero de Ayuda</a></li>
+                  <!--
                 <li><a href="#">Numero de Ayuda</a></li>-->
             </ul>
-        </li>
-        <li><a href="Chatbot/chatbot.php">Alice</a></li>
+        </li><!--
+        <li><a href="Chatbot/chatbot.php">Alice</a></li>-->
+        <li><a href="psicologo_/login.html">Alice</a></li>
         <li><a href="nav-alice-centros/centros.html">Centros de Ayuda</a></li>
         <li><a href="nav-alice-usuarios/login.html" class="btn-Derecha">Inicia sesión</a></li>
         <li><a href="nav-alice-usuarios/signin.html" class="btn-Derecha">Registrate</a></li>
